# blob_tracker_ros

./: .gitignore  CMakeLists.txt  README.md  README.org  nodelet_plugins.xml  package.xml
cfg/: CropDecimate.cfg  ProcessImage.cfg
include/blob_tracker/: advertisement_checker.h  processor.h
launch/: blob_tracker.launch
msg/: Blob.msg  Blobs.msg
src/libblob_tracker/: advertisement_checker.cpp  processor.cpp
src/nodelets/: crop_decimate.cpp  process_image.cpp
src/nodes/: blob_tracker.cpp
test/: CMakeLists.txt  rostest.cpp  test_bayer.xml
